# Wawona

./: .envrc  .gitignore  .nvimlog  CMakeLists.txt  EGL_RESEARCH.md  EGL_TEST_RESULTS.md  Info.plist.ios.in  KOSMICKRISP.md  Makefile  Makefile.test_client  Progress.md  README.md  REPOSITORY_STRUCTURE.md  TEST_CLIENTS_QUICKSTART.md  docs-GBM-DRM-KMS.md  docs-STUBS-AND-WRAPPERS.md  flake.nix  install-epoll-shim-ios.sh  install-kosmickrisp-ios.sh  install-libffi-ios.sh  install-lz4-ios.sh  install-pixman-ios.sh  install-wayland-ios.sh  install-waypipe-ios.sh  install-zstd-ios.sh  macos_wlclient_color_test  result  test-egl-comprehensive.c  test-egl-comprehensive.sh  test-egl-installed  test-ios.nix  test_color_client.c
.github/: FUNDING.yml
.github/workflows/: build.yml  complete-test.yml  dependencies.yml  dependency-updates.yml  egl-tests.yml  fix.yml  kosmickrisp-tests.yml  main.yml  maintt.yml  manual.yml  protocols.yml  speed.yml  zink-moltenvk-tests.yml
Settings.bundle/: Root.plist
build-ios/: Info.plist  Makefile  metal_shaders.air  metal_shaders.metallib
build-ios/Wawona.app/: Info.plist  Wawona
dependencies/: BUILD_USAGE.md  README.md  android.nix  build.nix  default.nix  flake-module.nix  ios-meson.nix  ios.nix  registry.nix  wawona-build.nix  wawona.nix  xcode-wrapper.nix
dependencies/common/: android-toolchain.nix  common.nix
dependencies/patches/: README.md
dependencies/utils/: find-xcode.sh  test-ios-toolchain-cross.nix  test-ios-toolchain.nix  xcode-wrapper.nix
docs/: ANIMATION_ISSUE.md  APP_STORE_COMPLIANCE.md  CLIENT_SETUP.md  COLOR_OPERATIONS_ANALYSIS.md  DEPENDENCIES.md  EGL_ON_MACOS.md  PORTING_WAYLAND_APPS_TO_MACOS.md  PROGRESS.md  TEST_CLIENTS.md  TEST_CLIENTS_SUMMARY.md  USAGE.md  VULKAN_ENTRYPOINT_STUBS.md  WESTON_NESTED_ERRORS.md  build-test-summary.md  compilation.md  kosmickrisp-build-comparison.md  kosmickrisp.md  macOS_API_VERIFICATION.md  notes.md  research-from-chatgpt-vulkan-android.md  research-from-chatgpt-wayland-macos.md  research-from-chatgpt-waypipe-rs.md  todo.md
libffi/: Makefile
libffi/aarch64-apple-darwin/: Makefile  config.status  fficonfig.h  libffi.la  libffi_convenience.la  libtool  local.exp
libinput-macos-stubs/: gbm-stub.c  gbm.h  glesv2-stub.c  libdisplay-info  libdrm-stub.pc  libdrm.pc  libevdev-stub.pc  libudev-stub.pc  libudev.h  linux-input-compat.h  mtdev-stub.c  mtdev-stub.pc  pnp.ids  signalfd-compat.h  sys-sysmacros-compat.h  timerfd-compat.h  udev-stub.c  xf86drm-compat.h
libinput-macos-stubs/GLES3/: gl3.h
pixman/: meson.build  test_detect.c  test_getisax.c
pixman/pixman/: pixman-glyph.c  pixman-sse2.c  pixman.c
scripts/: Makefile.appstore  Makefile.debug  RUN_CLIENT.sh  SET_ENV.sh  apply-strict-flags.sh  build-host-mesa-tools.sh  build-libinput-macos.sh  build-libinput.sh  build-weston-compositor.sh  build-xkbcommon.sh  check-deps.sh  clone-all-dependencies.sh  colima-client.sh  colima-weston-simple-egl.sh  colima-wlcs.sh  connect-client.sh  create-all-patches.sh  create-kosmickrisp-framework.sh  create-patch.sh  create-static-framework.sh  create-wayland-framework.sh  generate-cmd-enqueue-stubs.py  generate-cross-ios.sh  generate-ios-protocols.sh  generate-vk-common-stubs.py  generate-vulkan-stubs.py  generate-wsi-forwards-from-source.py  install-atk.sh  install-cairo.sh  install-epoll-shim.sh  install-expat.sh  install-ffmpeg.sh  install-fontconfig.sh  install-freetype.sh  install-fribidi.sh  install-gdk-pixbuf.sh  install-gettext.sh  install-glib.sh  install-gtk.sh  install-harfbuzz.sh  (+29 more)
scripts/clients/: README.md  build-all.sh  build-debug-tools.sh  build-minimal.sh  build-weston.sh  weston-clients-only.patch
scripts/colima-client/: common.sh  docker-setup.sh  waypipe-setup.sh
scripts/test-clients/: build-nested.sh  create-stub-pkgconfig.sh  patch-weston-meson.sh  run-single-test.sh  run-tests.sh
src/: Makefile  WawonaCompositor.h  WawonaCompositor.m  WawonaPreferences.m  WawonaPreferencesManager.h  WawonaPreferencesManager.m  apple_backend.h  color-management-v1-protocol.h  config.h  egl_buffer_handler.c  egl_buffer_handler.h  input_handler.h  input_handler.m  ios_launcher_client.h  ios_launcher_client.m  ios_main.m  logging.c  macos_backend.h  macos_backend.m  main.m  metal_dmabuf.h  metal_dmabuf.m  metal_renderer.h  metal_renderer.m  metal_shaders.metal  metal_waypipe.h  metal_waypipe.m  rendering_backend.h  surface_renderer.h  surface_renderer.m  text-input-v1-protocol.c  text-input-v1-protocol.h  text-input-v1-protocol.h.server  text-input-v3-protocol.c  vulkan_cmd_enqueue_stubs.c  vulkan_entrypoint_stubs.c  vulkan_ios_wrapper.c  vulkan_renderer.h  vulkan_renderer.m  wayland_color_management.c  (+39 more)
src/android/: README.md  android_jni.c
src/applications/: README.md
src/core/: WawonaCompositor.h  WawonaCompositor.m  main.m
src/input/: cursor_shape_bridge.m  input_handler.h  input_handler.m  wayland_seat.c  wayland_seat.h
src/launcher/: Makefile  wayland_launcher.h  wayland_launcher.m
src/logging/: logging.c  logging.h
src/protocols/: README.md  color-management-v1-protocol.h  fractional-scale-protocol.h  linux-dmabuf-unstable-v1-protocol.h  primary-selection-protocol.h  tablet-stub.c  text-input-v1-protocol.c  text-input-v3-protocol.h  viewporter-protocol.h  xdg-activation-protocol.h  xdg-decoration-protocol.h  xdg-toplevel-icon-protocol.h
src/rendering/: metal_dmabuf.h  metal_dmabuf.m  metal_renderer.h  metal_renderer.m  rendering_backend.h  rendering_backend.m  surface_renderer.h  surface_renderer.m
src/stubs/: angle_entrypoint_stubs.c  egl_buffer_handler.c  egl_buffer_handler_stubs.c  vulkan_common_stubs.c
src/ui/: WawonaAboutPanel.h  WawonaAboutPanel.m  WawonaPreferences.h  WawonaPreferences.m  WawonaPreferencesManager.h  WawonaPreferencesManager.m  (+4 more)
tests/: Makefile  Makefile.runner  simple_client_helpers.c  test-egl-simple.c  test-egl.c  test_client.c  test_color_client.c  test_glxgears.c  test_header2.c  test_input_client.c  test_link.c  test_meson_header.c  test_prctl.c
tools/: egl_dump_configs  egl_dump_configs.c  vk_dump_features  vk_dump_features.c
(+153 files in other folders)
